sumo/tests/traci/StopNode/InvalidNode/testclient_out.traci
TraCITestClient output file. Date: Wed Feb 11 11:04:36 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=2008.05 y=491.75

-> Command sent: <StopNode>:
  NodeId=-1 Position-2D: x=0 y=0 radius=0 waitTime=0
.. Answered with error to command (18), [description: Can not retrieve node with given ID]

-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=2009.05 y=491.75

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
